--- a/style.css
+++ b/style.css
@@ -1,10 +1,31 @@
 
-@media (max-width: 600px) {
-  #game {
-    width: 90%; /* ajuste de acordo com suas necessidades */
-    height: 90%;
+@media screen and (max-width: 600px) {
+  .game {
+    width: 100%;
+    height: 400px;
+    /* estilos específicos para telas menores */
   }
 }
+
+/* Media query para telas menores ou iguais a 400px */
+@media screen and (max-width: 400px) {
+  .game {
+    width: 100%;
+    height: 300px;
+    /* estilos específicos para telas ainda menores */
+  }
+}
+
+  .container {
+    max-width: 100%; /* usar a largura total da tela */
+  }
+  .box {
+    max-width: 100%; /* usar a largura total da tela */
+  }
+
+
+
+
 
 body {
   background-color: #0002A1;
